--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<link type="text/css"; rel="stylesheet"; href="stylesheet.css">
+	<meta charset="utf-8">
+	<title>La página del Kcuau</title>
+</head>
+<body>
+	<a href="https://mx.linkedin.com/in/cuauhtémoc-treviño-4632885b"><img id="fotocv"; src="cvcuau.jpg"/></a>
+	<div id="personal_info">	
+		<h2>Personal Information</h2>
+		<p>Cuauhtémoc Benjamín Treviño Martínez</p>
+		<p>Date of birth: June 29, 1993</p>
+		<p>Birthplace: Monterrey, Nuevo León, México</p>
+		<p>Cell number: 8116927287</p>
+		<p>E-mail: cuauhtemoc_2993@hotmail.com</p>
+	</div>	
+	<div id="goal">
+		<h2>Goal</h2>
+		<p>Bring all of my skills, knowledge, and enthusiasm to be part of the corporate growth of the company, looking to have development opportunities within it</p>
+		<h2>Areas of Interest</h2>
+		<p>Investment banking, cyber security insurance, portfolio management, financial engineering, consulting,
+	financial analysis, strategic planning, operations management</p>
+	</div>
+	<h2>Education</h2>
+	<p>Instituto Tecnológico y de Estudios Superiores de Monterrey (ITESM) campus Monterrey
+Licenciado en Administración Financiera (LAF) – Graduated with Honorable Mention of Excellence
+August 2011 – December 2015; GPA: 4.0</p>
+	<h2>Courses</h2>
+	<div id="location"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14386.237069987847!2d-100.29944176903811!3d25.65274918897969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662bfb761b540e1%3A0x8f4f0a5e7598d87a!2sTecnol%C3%B3gico%2C+Monterrey%2C+N.L.!5e0!3m2!1ses-419!2smx!4v1463019252754"></iframe></div>
+	<p>
+		<ul>
+			<li>CFA Programme: Passed the CFA Level I Exam</li>
+			<li>CFA Institute Research Challenge: Valuation of IENOVA (Mexican Gas Utilities</li>
+			<li>Clínica Bancomer: Course experience at managing a real portfolio following a proposed investment strategy</li>
+			<li>Desafío Latam Programming Bootcamp (May-September 2016)</li>
+		</ul>
+	</p>
+	<h2>Professional Experience</h2>
+	<p>
+		<ul>
+			<li>Business Analyst Jr at Naranya from November 2015 to date</li>
+			<li>Portfolio Manager at Clínica Bancomer course from February 2015 to May 2015</li>
+			<li>Index Team Client Service at MSCI from March 2014 to October 2015</li>
+		</ul>
+	</p>
+	<h2>Abilities</h2>
+	<p>- Spanish (native language) – Advanced English (TOEFL 643) – Intermediate French (DELF B1)
+- Pitch Decks – Business Plans – Market Research – Expansion Projects Analysis – Forecasting of Financial
+Statements – Project Valuation – Industry Analysis – MatLab – Business Development – Sales – Microsoft
+Office (Excel, Power Point, Word) – Bloomberg – MSCI Raw Data Management</p>
+	<h2>Extracurricular activities</h2>
+	<p>- President of Club Parkour Tec at ITESM from January to December 2013 – 3rd place in the first Derivatives
+Tournament that took place at ITESM from September 26 to September 27 2013</p>
+</body>
+</html>
