--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
 	<link type="text/css"; rel="stylesheet"; href="stylesheet.css">
 	<meta charset="utf-8">
-	<title>La página del Kcuau</title>
+	<meta property="og:title" content="CV Cuau Treviño" />
+	<meta property="og:type" content="website" />
+	<meta property="image" content="Cuau2993.github.io/cvcuau.jpg"
+	<meta property="og:url" content="http://cuau2993.github.io/" />
+	<title>CV Cuau Treviño</title>
 </head>
 <body>
 	<a href="https://mx.linkedin.com/in/cuauhtémoc-treviño-4632885b"><img id="fotocv"; src="cvcuau.jpg"/></a>
@@ -52,5 +56,39 @@ Office (Excel, Power Point, Word) – Bloomberg – MSCI Raw Data Management</p>
 	<h2>Extracurricular activities</h2>
 	<p>- President of Club Parkour Tec at ITESM from January to December 2013 – 3rd place in the first Derivatives
 Tournament that took place at ITESM from September 26 to September 27 2013</p>
+	<form>	
+		<fieldset>
+		<legend>Contact Information</legend>
+		First Name: <input type="text" name="name"><br>
+		Last Name: <input type="text" name="last name"><br>
+		e-mail: <input type="email" name="email"><br>
+		</fieldset>
+		
+		<fieldset>
+		<legend>Contacting Reasons</legend>
+		<select name="reason">
+			<option value="Potential interview">Potential Interview</option>
+			<option value="Project Collaboration">Project Collaboration</option>
+			<option value="Finance Tutorials">Finance Tutorials</option>
+			<option value="PInvestment Recommendations">Investment Recommendations</option>
+			<option value="Other">Other</option>
+		</select><br>
+		<textarea name="Other Reason" rows="4" cols="50">
+			If other, what is the specific reason?
+		</textarea>
+		</fieldset>
+		<input type="submit" value="Send">
+	</form>
+
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-77863523-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
