script of analytics fixed

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta property="og:title" content="CV Cuau Treviño" />
 	<meta property="og:type" content="website" />
-	<meta property="image" content="Cuau2993.github.io/cvcuau.jpg"
-	<meta property="og:url" content="http://cuau2993.github.io/" />
+	<meta property="image" content="Cuau2993.github.io/cvcuau.jpg" />
+	<meta property="og:url" content="http://cuau2993.github.io" />
 	<title>CV Cuau Treviño</title>
 </head>
 <body>
