--- a/index.html
+++ b/index.html
@@ -1,95 +1,93 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link type="text/css"; rel="stylesheet"; href="stylesheet.css">
 	<meta charset="utf-8">
-	<meta property="og:title" content="CV Cuau Treviño" />
-	<meta property="og:type" content="website" />
-	<meta property="image" content="Cuau2993.github.io/cvcuau.jpg" />
-	<meta property="og:url" content="http://cuau2993.github.io" />
-	<title>CV Cuau Treviño</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css"; rel="stylesheet"; href="stylesheet.css">
+	<title>examen 1</title>
 </head>
-<body>
-	<a href="https://mx.linkedin.com/in/cuauhtémoc-treviño-4632885b"><img id="fotocv"; src="cvcuau.jpg"/></a>
-	<div id="personal_info">	
-		<h2>Personal Information</h2>
-		<p>Cuauhtémoc Benjamín Treviño Martínez</p>
-		<p>Date of birth: June 29, 1993</p>
-		<p>Birthplace: Monterrey, Nuevo León, México</p>
-		<p>Cell number: 8116927287</p>
-		<p>E-mail: cuauhtemoc_2993@hotmail.com</p>
-	</div>	
-	<div id="goal">
-		<h2>Goal</h2>
-		<p>Bring all of my skills, knowledge, and enthusiasm to be part of the corporate growth of the company, looking to have development opportunities within it</p>
-		<h2>Areas of Interest</h2>
-		<p>Investment banking, cyber security insurance, portfolio management, financial engineering, consulting,
-	financial analysis, strategic planning, operations management</p>
+<body class="col-12">
+	<nav id="regresar_arriba">
+		Regresar arriba	
+	</nav>
+
+	<div id="fondo" class="col-12 centrado">
+		<img class="col-4 col-offset-4" src="logo+en+1+mes.png"><br>
+		<h2 class="titulofondo col-12">TALLER DE GROWTH HACKING</h2>
+		<h3 class="titulofondo col-12">Aprende a hacer más con menos</h3>
+		<div class="col-12">
+			<a class="button" href="http://desafiolatam.com/"><strong>¡Ve más sobre Desafío Latam!</strong></a>
+		</div>
 	</div>
-	<h2>Education</h2>
-	<p>Instituto Tecnológico y de Estudios Superiores de Monterrey (ITESM) campus Monterrey
-Licenciado en Administración Financiera (LAF) – Graduated with Honorable Mention of Excellence
-August 2011 – December 2015; GPA: 4.0</p>
-	<h2>Courses</h2>
-	<div id="location"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14386.237069987847!2d-100.29944176903811!3d25.65274918897969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662bfb761b540e1%3A0x8f4f0a5e7598d87a!2sTecnol%C3%B3gico%2C+Monterrey%2C+N.L.!5e0!3m2!1ses-419!2smx!4v1463019252754"></iframe></div>
-	<p>
-		<ul>
-			<li>CFA Programme: Passed the CFA Level I Exam</li>
-			<li>CFA Institute Research Challenge: Valuation of IENOVA (Mexican Gas Utilities</li>
-			<li>Clínica Bancomer: Course experience at managing a real portfolio following a proposed investment strategy</li>
-			<li>Desafío Latam Programming Bootcamp (May-September 2016)</li>
-		</ul>
-	</p>
-	<h2>Professional Experience</h2>
-	<p>
-		<ul>
-			<li>Business Analyst Jr at Naranya from November 2015 to date</li>
-			<li>Portfolio Manager at Clínica Bancomer course from February 2015 to May 2015</li>
-			<li>Index Team Client Service at MSCI from March 2014 to October 2015</li>
-		</ul>
-	</p>
-	<h2>Abilities</h2>
-	<p>- Spanish (native language) – Advanced English (TOEFL 643) – Intermediate French (DELF B1)
-- Pitch Decks – Business Plans – Market Research – Expansion Projects Analysis – Forecasting of Financial
-Statements – Project Valuation – Industry Analysis – MatLab – Business Development – Sales – Microsoft
-Office (Excel, Power Point, Word) – Bloomberg – MSCI Raw Data Management</p>
-	<h2>Extracurricular activities</h2>
-	<p>- President of Club Parkour Tec at ITESM from January to December 2013 – 3rd place in the first Derivatives
-Tournament that took place at ITESM from September 26 to September 27 2013</p>
-	<form>	
+
+	<div id="intro" class="col-12">
+		<h1 class="centrado">¿Aburrido de hacer campañas de marketing poco exitosas?</h1><br>
+		<h3 class="centrado">Pon creatividad en tu negocio y con poco dinero empieza a multiplicar tus ingresos. Aprende como trabajar con PNL en tu negocio y hacer hacks para conseguir más clientes.</h3><br>
+	</div>
+
+	<div class="col-12">
+		<h4 class="centrado">Aprende en 8 horas intensivas de un maestro de Growth Hacking a nivel internacional a como vender de manera más ingeniosa</h4>
+	</div>
+
+	<div class="informes col-11">
+		<h2 class="centrado">Inscríbete hoy a un taller que hará despegar tus ingresos.</h2><br>
+		<p><strong>Cuando:</strong></p>
+		<p>Viernes y sábado, 11 y 12 de marzo.</p><br>
+		<p><strong>Horario:</strong></p>
+		<p>Viernes de 19 a 22 hrs y sábado de 9 a 13 hrs.</p><br>
+		<p><strong>El valor del curso es:</strong></p>
+		<p>$160,000 Aprovecha precio 1° preventa de $89,500, luego sube a $102,500</p><br>
+		<p><strong>Donde:</strong></p>
+		<p>ITESM campus Monterrey</p>
+		<div class="col-10 col-offset-1 centrado"><iframe class="col-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14386.237069987847!2d-100.29944176903811!3d25.65274918897969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662bfb761b540e1%3A0x8f4f0a5e7598d87a!2sTecnol%C3%B3gico%2C+Monterrey%2C+N.L.!5e0!3m2!1ses-419!2smx!4v1463019252754"></iframe></div>
+	</div>
+
+	<div class="col-12">
 		<fieldset>
-		<legend>Contact Information</legend>
-		First Name: <input type="text" name="name"><br>
-		Last Name: <input type="text" name="last name"><br>
-		e-mail: <input type="email" name="email"><br>
+			<legend>Datos personales</legend>
+				<h5>Nombre y Apellido</h5>
+				<input type="text" placeholder="Nombre"><br>
+				<h5>Correo electrónico</h5> 
+				<input type="text" placeholder="Email"><br>
+				<h5>Teléfono</h5>
+				<input type="text" placeholder="Teléfono"><br>
+				<input type="submit" value="Enviar"><br>
+				<h5>¿Dudas? Escribe a cuauhtemoc_2993@hotmail.com</h5><br>
 		</fieldset>
-		
-		<fieldset>
-		<legend>Contacting Reasons</legend>
-		<select name="reason">
-			<option value="Potential interview">Potential Interview</option>
-			<option value="Project Collaboration">Project Collaboration</option>
-			<option value="Finance Tutorials">Finance Tutorials</option>
-			<option value="PInvestment Recommendations">Investment Recommendations</option>
-			<option value="Other">Other</option>
-		</select><br>
-		<textarea name="Other Reason" rows="4" cols="50">
-			If other, what is the specific reason?
-		</textarea>
-		</fieldset>
-		<input type="submit" value="Send">
-	</form>
+	</div>
 
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<div class="col-12 centrado">
+		<h2>Empresas que nos apoyan</h2><br>
+		<img class="col-2" src="ASECH-Logo.png">
+		<img class="col-2 col-offset-1" src="microsoft.png">
+		<img class="col-2 col-offset-1" src="logo+DF.png">
+		<img class="col-2 col-offset-1" src="innovachilecorfo.jpg">
+	</div><br>
 
-  ga('create', 'UA-77863523-1', 'auto');
-  ga('send', 'pageview');
+	<div class="col-12">
+		<h2 class="centrado">Queremos que te olvides del marketing tradicional y empieces a pensar fuera de la caja</h2><br>
+		<p class="centrado">Aumentar tus ingresos lo puedes hacer de muchas acciones claves que de seguro no estás haciendo y deberías antes que tu competencia. ¡Empieza ya!</p>
+	</div>
 
-</script>
+	<article class="col-12">
+		<h2>Hacker a cargo</h2><br>
+		<section>
+			<img class="col-4 col-offset-4" src="cvcuau.jpg"><br>
+		</section><br>
+		<section class="col-12">
+			<h4>Cuauhtémoc Treviño</h4>
+			<h3>Finanzas / Programming</h3>
+			<p>Busco compartir el conocimiento que he obtenido a través del tiempo a aquellas personas que deseen aprender continuamente y mejorar el alcance de sus acciones.</p><br>
+		</section>
+	</article><br>
 
+	<footer class="col-12 centrado">
+		<p>Todos los derechos reservados.</p><br>
+		<img src="twitter.png">
+		<img src="facebook.png">
+		<img src="Linkedin.png">
+		<p>Avenida Eugenio Garza Sada #450, Colonia Tecnológico, Monterrey, NL</p>
+	</footer>
 </body>
 </html>
